"$Id$"
Top of CVS tree:
------------------------------------------------------------------------------

configure.in: Fix opengl checks.
Alex Schultz 2006-09-17

Fix bug 1531060 - metaserver selection button is improperly activated.
Fix this by clearing the text box if an entry in the tree widget is selected -
if text is entered in the text box, unselect any selection - keeps it
very consistent what the connect button does.  Have it greyed out until
there is either text in the text box or something selected in the treeview.
--
gtk-v2/gtk-v2.glade: add callback for key press events for text entry
  box.
gtk-v2/src/callbacks.h,gtk-v2/src/interface.c: Rebuilt
gtk-v2/src/metaserver.c: Add code to activate/disable button based on
  status.  Add code to clear text box when treeview selected.  Add code
  to deselect treeview if data is entered in textbox.
MSW 2006-09-05

gtk-v2/src/stats.c: Fix bug 1527966 - protections window not properly
   updated.  Wrong variable was being used in loop.
MSW 2006-09-05


gtk-v2/src/map.c: Clear clipmask and clear window in draw_splash() so that
   splash is correctly redrawn.
gtk-v2/src/metaserver.c: Add call to draw_map() in metaserver selection just
  to make sure splash is drawn correctly.
MSW 2006-09-04

gtk-v2/src/inventory.c: Fix bug 1528014 - when dropping all objects, display
  isn't updated correctly.  Remove checks for cpl.ob->inv - relying on
  cpl.ob->inv_updated appears to work fine.
gtk-v2/src/keys.c: Fix bug 1527988 - message about unused keys isn't very
   useful.  Include meta and alt information about unused keys.  Add
   warning message to bind when trying to bind a key that may conflict
   with an existing binding.
MSW 2006-09-04

Add suggestion from bug 1528536 - some menu items should be disabled during
metaserver selection.
--
gtk-v2/gtk-v2.glade: Fix some incorrect name (meny vs menu)
gtk-v2/src/interface.c: Rebuilt
gtk-v2/src/menubar.c: Add enable_menu_items(), which enables/disables some
   menu items.